fixed a layout issue, one font was showing up wrong

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ a:active{
 
 h1{
     font-family: 'Montserrat', sans-serif;
-    font-size: 23;
+    font-size: 2em;
 }
 
 h2{
@@ -172,10 +172,5 @@ h2{
 
 h3{
   font-family: 'Montserrat', sans-serif;
-}
-
-.header{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 23;
 }
 
